# librascal

./: GNUmakefile  LICENSE  Makedefs.faerion  configure  configure.in
Documents/: librascal-1.odt  librascal-2.odt
sources/: rascal.h
sources/bsd/: GNUmakefile  connection.cc  connection.h  connection_dg.cc  connection_in.cc  librascal.exp  rascal_accept.cc  rascal_connect.cc  rascal_get_rq_size.cc  rascal_get_sq_size.cc  rascal_init.cc  rascal_read.cc  rascal_set_context.cc  rascal_set_dispatcher.cc  rascal_shrink.cc  rascal_work.cc  rascal_write.cc
sources/common/: GNUmakefile  common.h  datachain.cc  datachain.h  datachainitem.cc  debug.cc  debug.h  object.cc  object.h  packetchain.cc  rascal.cc  rascal.rc  rascal_accept_service.cc  rascal_aton.cc  rascal_cancel.cc  rascal_connect.cc  rascal_connect_service.cc  rascal_dumpfile.cc  rascal_get_errmsg.cc  rascal_ntoa.cc  rascal_options.cc  rascal_wait.cc
sources/common/resolver/: header.cc  monitor.cc  rascal_getaddr.cc  rascal_gethost.cc  rascal_getsrv.cc  rascal_set_nameserver.cc  request.cc  resolver.cc  resolver.h
sources/common/util/: ftspec.cc  ftspec.h  gettime.cc  list.h  memory.cc  memory.h  mutex.cc  mutex.h  random.cc  random.h  sem.cc  sem.h  stock.h  string.h  strlcpy.cc  strlcpya.cc
sources/nt/: GNUmakefile  connectex.cc  connection.cc  connection.h  connection_dg.cc  connection_dg.h  connection_st.cc  connection_st.h  iocp.cc  iocp.h  ntevent.h  oaccept.cc  oconnect.cc  oreader.cc  oreader_dg.cc  overlapped.cc  owriter.cc  owriter_dg.cc  rascal.cc  rascal.rc  rascal_accept.cc  rascal_connect.cc  rascal_get_rq_size.cc  rascal_get_sq_size.cc  rascal_init.cc  rascal_read.cc  rascal_set_dispatcher.cc  rascal_write.cc
sources/samples/: GNUmakefile
sources/samples/01-raconn/: GNUmakefile  raconn.cc  raconn.rc
sources/samples/02-raconns/: GNUmakefile  test-02.cc  test-02.rc
sources/samples/03-radnsperf/: GNUmakefile  test-03.cc  test-03.rc
sources/samples/04-rahost/: GNUmakefile  rahost.cc
sources/samples/05-raflood/: GNUmakefile  raflood.cc
sources/samples/06-ralc/: GNUmakefile  ralc.cc
sources/samples/07-rasvc/: GNUmakefile  rasvc.cc
